# wdumper-scraper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  RecentDumpsPage.py  Scraper.py  notebook.ipynb  pyproject.toml  requirements-dev.txt
cache/: scraper_cache.sqlite
src/wdumper_scraper/: __init__.py  cached_limiter_session.py  dump_info.py  dump_info_page.py  dump_page.py  dumps_info_loader.py  exceptions.py  recent_dumps_page.py  scrape_reporter.py  scrape_result.py  scraper.py  wdumper_client.py  wdumper_clients.py  wdumper_scraper.py
tests/: conftest.py  test_dump_info.py  test_dump_info_page.py  test_dump_page.py  test_dumps_info_loader.py  test_recent_dumps_page.py  test_scraper.py  test_wdumper_client.py
