[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wdumper-scraper"
version = "0.1.0"
dependencies = [
    "requests",
    "requests-cache",
    "requests-ratelimiter",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "nbstripout",
    "pytest",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]
