[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wdumper-scraper"
version = "0.1.0"
dependencies = [
    "requests",
    "requests-cache",
    "requests-ratelimiter",
    "beautifulsoup4",
    "tqdm[notebook]",
    "ipython"
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "pre-commit",
    "pytest",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]
